--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ compiler:
 script: source tests/activate && scons tests
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq portaudio19-dev libjack-dev ladspa-sdk liblua5.2-dev libsndfile1-dev lua5.2 alsa-utils
+ - sudo apt-get install -qq valgrind portaudio19-dev libjack-dev ladspa-sdk liblua5.2-dev libsndfile1-dev lua5.2 alsa-utils
  - aplay --list-devices
