--- a/tests/interactive/SConscript
+++ b/tests/interactive/SConscript
@@ -2,8 +2,9 @@ Import('env')
 
 for source in Glob('*.c'):
     test = env.Program(
-        'test_' + str(source).rstrip('.c'),
+        str(source).rstrip('.c'),
         [source],
         LIBPATH='../../',
-        LIBS=['beemo', 'm', 'pthread', 'lua5.2', 'portaudio']
+        LIBS=['beemo', 'm', 'pthread', 'lua5.2', 'portaudio'],
+        CCFLAGS=env['CCFLAGS']+['-g3']
     )
