--- a/tests/SConscript
+++ b/tests/SConscript
@@ -1,6 +1,7 @@
 import os
 import subprocess
 import itertools
+import uuid
 
 from SCons.Errors import BuildError
 
@@ -25,6 +26,10 @@ tests for the main library.  Hopefully this encourages more sanity-checks.
 # This is due to scons building out-of-order (deferred)
 __file__ = os.getcwd()
 
+def _print(*args):
+    if GetOption('silent'):
+        return
+    print ' '.join((str(arg) for arg in args))
 
 def run_all_tests(env, sources_list, **kwargs):
     """
@@ -60,17 +65,17 @@ def run_all_tests(env, sources_list, **kwargs):
 
     def _report_test_status(target, source, env):
         for test in failures:
-            print("=" * 80)
-            print("FAILURE: '%s'" % test.test_path)
-            print(test.stdout.read())
-            print(test.stderr.read())
-            print('-' * 80)
+            _print("=" * 80)
+            _print("FAILURE: '%s'" % test.test_path)
+            _print(test.stdout.read())
+            _print(test.stderr.read())
+            _print('-' * 80)
         for test in errors:
-            print("=" * 80)
-            print("ERROR: '%s'" % test.test_path)
-            print(test.stdout.read())
-            print(test.stderr.read())
-            print('-' * 80)
+            _print("=" * 80)
+            _print("ERROR: '%s'" % test.test_path)
+            _print(test.stdout.read())
+            _print(test.stderr.read())
+            _print('-' * 80)
         if any(failures) or any(errors):
             nodes = itertools.chain(
                 (failure.target[0] for failure in failures),
@@ -118,7 +123,7 @@ def run_all_tests(env, sources_list, **kwargs):
                 else:
                     failures.append(ps)
             except OSError as e:
-                print(e)
+                _print(e)
                 errors.append(ps)
             finally:
             # Pretend to return success, whatever the real result.
@@ -137,7 +142,7 @@ def run_all_tests(env, sources_list, **kwargs):
     # We must register `_report_test_status` to depend on built tests, and it must
     # check if not all tests have been completed and exit immediately in that case.
     # Because 'results.txt' is never created, this test always runs.
-    report_test_status = Command('results.txt', programs, _report_test_status)
+    report_test_status = Command(uuid.uuid4().hex, programs, _report_test_status)
     Depends(report_test_status, programs)
 
     return programs
@@ -161,13 +166,22 @@ if any(map(
         ),
         os.environ.keys()
 )):
-    extra_commands=["""valgrind --error-exitcode=1 --leak-check=full $"""]
+    extra_commands=[
+        """valgrind --error-exitcode=1 --leak-check=full --num-callers=500 $"""
+    ]
+
+#We don't want NDEBUG for the tests
+#replace the original construction environment
+env = env.Clone()
+try:
+    env['CPPDEFINES'].remove('NDEBUG')
+except ValueError:
+    pass
 
 all_my_tests = env.RunAllTests(
     Glob('*.c'),
     LIBPATH='../',
     LIBS=LIBS,
-    file_extn='.c',
     extra_commands=extra_commands
 )
 
