major refactor of the build system to play nice includes for Lua are now non-qualified and pkg-config is used to determine paths windows implentation for getline_nowait major test portability cleanup remove some MSVC specifics   Please enter the commit message for your changes. Lines starting

--- a/pkg/SConscript
+++ b/pkg/SConscript
@@ -1,8 +1,12 @@
 import platform
-Import('env')
 
+from SCons.Errors import BuildError
+
+Import('env')
+if not 'pkg' in COMMAND_LINE_TARGETS:
+    Return()
 def unsupported(system):
-    raise BuildError("%s does not have a package builder yet..." % system)
+    raise BuildError(errstr="Cannot build %s installer; platform package builder not yet implemented." % system)
 
 supported = {
     'deb':lambda :env.SConscript('deb/SConscript', 'env'), 
