--- a/tests/interactive/SConscript
+++ b/tests/interactive/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 env = env.Clone()
-env.Append(LIBS=['beemo'])
+env.Append(LIBS=['beemo', 'm'])
 env.Append(LIBPATH='../../')
 
 for source in Glob('*.c'):
