updated .travis.yml to reflect recent builder changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: c
 env:
-  - RELEASE='release=true'
-  - RELEASE='release=false'
+  - RELEASE='--enable=release'
+  - RELEASE=''
 compiler:
   - gcc
   - clang
