Added some docs: building, lua api, drivers etc. updates #12 [ci skip]

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,9 @@ cachegrind.out.*
 
 # Doxgen Generated files #
 ##########################
+doxygen_sqlite3.db
+html/
+latex/
 
 # OS generated files #
 ######################
